--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,174 @@
+apturl==0.5.2
+asgiref==3.8.1
+asttokens==2.4.1
+astunparse==1.6.3
+Babel==2.8.0
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+blinker==1.4
+Brlapi==0.8.3
+Brotli==1.0.9
+certifi==2020.6.20
+chardet==4.0.0
+chrome-gnome-shell==0.0.0
+click==8.0.3
+colorama==0.4.4
+comm==0.2.2
+command-not-found==0.3
+contourpy==1.2.0
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.12.1
+dbus-python==1.2.18
+debugpy==1.8.1
+decorator==5.1.1
+defer==1.0.6
+defusedxml==0.7.1
+Deprecated==1.2.13
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+Django==5.0.4
+dnspython==2.1.0
+duplicity==0.8.21
+exceptiongroup==1.2.1
+executing==2.0.1
+fasteners==0.14.1
 Flask==2.0.3
-werkzeug==0.16.1
-numpy==1.23.5
-pandas==1.4.1
-scikit-learn==1.0.2
+flatbuffers==24.3.25
+fonttools==4.49.0
+future==0.18.2
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.2
 gunicorn==22.0.0
+gvm-tools==21.1.0
+gyp==0.1
+h5py==3.11.0
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+impacket==0.9.24
+importlib-metadata==4.6.4
+ipykernel==6.29.4
+ipython==8.24.0
+itsdangerous==2.1.0
+jedi==0.19.1
+jeepney==0.7.1
+Jinja2==3.0.3
+joblib==1.4.2
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+keras==3.3.3
+keyring==23.5.0
+kiwisolver==1.4.5
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+ldap3==2.8.1
+ldapdomaindump==0.9.3
+libclang==18.1.1
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+matplotlib==3.8.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+monotonic==1.6
+more-itertools==8.10.0
+mutagen==1.45.1
+namex==0.0.8
+nest-asyncio==1.6.0
+netifaces==0.11.0
+networkx==3.2.1
+numpy==1.22.3
+oauthlib==3.2.0
+olefile==0.46
+opt-einsum==3.3.0
+optree==0.11.0
+ospd==21.4.4
+ospd-openvas==21.4.3
+packaging==21.3
+pandas==1.4.1
+paramiko==2.9.3
+parso==0.8.4
+pexpect==4.8.0
+Pillow==9.0.1
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pycairo==1.20.1
+pycrypto==2.6.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+Pygments==2.17.2
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
+python-gvm==21.10.0
+pytz==2022.1
+pyxattr==0.7.2
+pyxdg==0.27
+pyxhook==1.0.0
+PyYAML==5.4.1
+pyzmq==26.0.2
+redis==3.5.3
+reportlab==3.6.8
+requests==2.25.1
+requests-toolbelt==0.9.1
+rich==13.7.1
+scikit-learn==1.0.2
+scipy==1.11.4
+SecretStorage==3.3.1
+simplejson==3.17.6
+six==1.16.0
+soupsieve==2.3.1
+sqlparse==0.5.0
+stack-data==0.6.3
+systemd-python==234
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+terminaltables==3.1.0
+threadpoolctl==3.5.0
+tornado==6.4
+traitlets==5.14.3
+typing_extensions==4.11.0
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+vboxapi==1.0
+wadllib==1.3.6
+wcwidth==0.2.13
+webencodings==0.5.1
+websockets==9.1
+Werkzeug==2.0.2
+wrapt==1.13.3
+xdg==5
+xkit==0.0.0
+yt-dlp==2022.4.8
+zipp==1.0.0
